bin/testsuite/tests/compiler/src/errors/compiler5077.swg
#global testerror "Err0748"
namespace A
{
}

func toto()->A {}
